--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
             tools:targetApi="31">
         <activity
                 android:name=".UserActivity"
-                android:exported="true">
+                android:exported="true"
+                android:theme="@style/Theme.EnglishTraining.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
