--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:theme="@style/Theme.EnglishTraining"
             tools:targetApi="31">
         <activity
+                android:name=".CalenderActivity"
+                android:exported="false"/>
+        <activity
                 android:name=".UserActivity"
                 android:exported="true"
                 android:theme="@style/Theme.EnglishTraining.NoActionBar">
@@ -27,11 +30,13 @@
                 android:exported="false"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.EnglishTraining.NoActionBar">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN"/>-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER"/>-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN"/> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
